@@ -2,9 +2,11 @@
 # See also LICENSE.txt
 
 from gocept.amqprun.writefiles import FileWriter
+import Queue
 import gocept.amqparchive.interfaces
 import gocept.amqparchive.xml
 import logging
+import multiprocessing
 import optparse
 import os.path
 import pyes
@@ -16,6 +18,8 @@ log = logging.getLogger(__name__)
 
 
 def reindex_file(path):
+    log.info(path)
+
     directory = os.path.dirname(path)
     filename = os.path.basename(path)
     basename, extension = os.path.splitext(filename)
@@ -34,15 +38,42 @@ def reindex_file(path):
     elastic.index(data, 'queue', 'message')
 
 
-def reindex_directory(path):
+def collect_message_files(path):
     for (dirpath, dirnames, filenames) in os.walk(path):
         for f in filenames:
             f = os.path.join(dirpath, f)
             if not FileWriter.is_header_file(f):
-                log.info(f)
-                reindex_file(f)
+                yield f
         for d in dirnames:
-            reindex_directory(os.path.join(dirpath, d))
+            collect_message_files(os.path.join(dirpath, d))
+
+
+def reindex_directory(path, jobs):
+    files = collect_message_files(path)
+    if jobs == 1:
+        for f in files:
+            reindex_file(f)
+    else:
+        queue = multiprocessing.JoinableQueue()
+        for f in files:
+            queue.put(f)
+        workers = []
+        for i in range(jobs):
+            job = multiprocessing.Process(
+                target=reindex_worker, args=(queue,))
+            job.start()
+            workers.append(job)
+        queue.join()
+
+
+def reindex_worker(queue):
+    while True:
+        try:
+            f = queue.get(False)
+        except Queue.Empty:
+            break
+        reindex_file(f)
+        queue.task_done()
 
 
 def delete_index(name):
@@ -55,13 +86,16 @@ def main(argv=None):
     o = optparse.OptionParser(
         prog='reindex_directory',
         description='Read archived message files into elasticsearch index',
-        usage='%prog [-d] -h host:port directory')
+        usage='%prog [-d] [-jX] -h host:port directory')
     o.add_option(
         '-d', '--delete', action='store_true',
         help='delete index first')
     o.add_option(
         '-c', '--connection',
         help='hostname and port of the elasticsearch server')
+    o.add_option(
+        '-j', '--jobs', default='1',
+        help='amount of worker processes')
 
     options, arguments = o.parse_args(argv)
     if len(arguments) != 1:
@@ -81,4 +115,4 @@ def main(argv=None):
         log.info('deleting index "queue"')
         delete_index('queue')
 
-    reindex_directory(arguments[0])
+    reindex_directory(arguments[0], int(options.jobs))
