@@ -20,10 +20,9 @@ class ReindexTest(unittest.TestCase):
         self.assertEqual('amqparchive', data['app_id'])
 
     def test_reindexes_each_message_filtering_out_header_files(self):
-        with mock.patch('gocept.amqparchive.reindex.reindex_file') as reindex:
-            gocept.amqparchive.reindex.reindex_directory(
-                pkg_resources.resource_filename(__name__, 'fixtures'))
-            self.assertEqual(1, reindex.call_count)
+        files = gocept.amqparchive.reindex.collect_message_files(
+            pkg_resources.resource_filename(__name__, 'fixtures'))
+        self.assertEqual(1, len(list(files)))
 
 
 # XXX tests for command line entry point are missing
